--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FlappyIA</title>
+    <title>Cube race</title>
     <script src="matter.min.js" defer></script>
     <script src="game.js" defer></script>
 </head>
